--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,8 +1,8 @@
-/* Hero section */
 .section-hero {
   padding-top: 200px;
   padding-bottom: 200px;
 }
+/* Hero section */
 .hero {
   background-color: $bckg-dark;
   max-width: 1600px;
@@ -18,35 +18,28 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
-/* Hero section container */
-.hero__face {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-.hero__title {
-  /* margin-top: 0; */
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
 
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+  /* Hero section container */
+  &__face {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  }
+  &__title {
+    /* margin-top: 0; */
+    margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 
-  color: #ffffff;
-}
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 
-.button__hero-batton {
-  width: 216px;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: auto;
-  margin-right: auto;
+    color: #ffffff;
+  }
 }
