--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -1,5 +1,4 @@
 :root {
-
 }
 
 html {
@@ -43,6 +42,17 @@ body {
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
+
+  &__title {
+    margin-top: 0;
+    margin-bottom: 50px;
+    padding: 0;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
 }
 
 .invisible {
@@ -80,4 +90,3 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
 }
-
