--- a/sass/components/_directions.scss
+++ b/sass/components/_directions.scss
@@ -9,45 +9,45 @@
   padding-bottom: 0;
   margin-top: 0;
   margin-bottom: 0;
-}
-.presentation__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-.presentation__item {
-  width: 370px;
-  position: relative;
-}
-.presentation__item + .presentation__item {
-  margin-left: 30px;
-}
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  &__item {
+    width: 370px;
+    position: relative;
+  }
+  &__item + &__item {
+    margin-left: 30px;
+  }
 
-.presentation__image {
-  width: 370px;
-  height: 294px;
-}
+  &__image {
+    width: 370px;
+    height: 294px;
+  }
 
-.presentation__overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
-  border: none;
-}
-.presentation__title {
-  display: block;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
+  &__overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    border: none;
+  }
+  &__title {
+    display: block;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 }
