--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -1,4 +1,5 @@
 /* Portfolio Filter Buttons */
+
 .filter {
   margin: 0;
   padding: 0;
@@ -6,56 +7,48 @@
   list-style: none;
   justify-content: center;
   margin-bottom: 50px;
-}
 
-.list.filter {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  // &__list {
+  //   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
 
-.filter__button {
-  padding: 0;
-  margin: 0;
-  padding-left: 22px;
-  padding-right: 22px;
-  padding-top: 6px;
-  padding-bottom: 6px;
-  background-color: $bckg-button;
-  color: $color-primary;
-  box-shadow: none;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  letter-spacing: 0.03em;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.filter__button:hover,
-.filter__button:focus {
-  /* padding-left: 25px; */
-  /* padding-right: 25px; */
-  outline: none;
+  &__button {
+    padding: 0;
+    margin: 0;
+    padding-left: 22px;
+    padding-right: 22px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    background-color: $bckg-button;
+    color: $color-primary;
+    box-shadow: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    letter-spacing: 0.03em;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__button:hover,
+  &__button:focus {
+    /* padding-left: 25px; */
+    /* padding-right: 25px; */
+    outline: none;
 
-  background-color: $color-accent;
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
+    background-color: $color-accent;
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 
-.filter__item + .filter__item {
-  margin-left: 8px;
-}
-
-.portfolio {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
-  list-style: none;
+  &__item + &__item {
+    margin-left: 8px;
+  }
 }
