--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -29,90 +29,130 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-}
-.modal__close {
-  display: flex;
-  width: 30px;
-  height: 30px;
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  transform: rotate(0deg);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__close:hover,
-.modal__close:focus {
-  transform: rotate(90deg);
-}
-.modal__close-icon {
-  width: 11px;
-  height: 11px;
-  fill: #000000;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__close:hover .modal__close-icon,
-.modal__close:focus .modal__close-icon {
-  fill: $color-accent;
-}
-.modal__container {
-  padding: 0;
-  margin: 0;
-  width: 448px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+  &__close {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    justify-content: center;
+    align-items: center;
+    background: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    transform: rotate(0deg);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__close:hover,
+  &__close:focus {
+    transform: rotate(90deg);
+  }
+  &__close-icon {
+    width: 11px;
+    height: 11px;
+    fill: #000000;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__close:hover &__close-icon,
+  &__close:focus &__close-icon {
+    fill: $color-accent;
+  }
+  &__container {
+    padding: 0;
+    margin: 0;
+    width: 448px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__title {
+    margin-bottom: 12px;
+    display: block;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
 }
 
-.modal__title {
-  margin-bottom: 12px;
-  display: block;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
-  letter-spacing: 0.03em;
-}
-
-form {
+.form {
   display: flexbox;
   width: 448px;
-}
 
-.form__list {
-  margin-bottom: 20px;
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0;
-}
+  &__list {
+    margin-bottom: 20px;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+  }
 
-.form__item {
-  padding: 0;
-  width: 448px;
-  display: flex;
-  flex-direction: column;
-  /* display: block; */
-  position: relative;
-}
+  &__item {
+    padding: 0;
+    width: 448px;
+    display: flex;
+    flex-direction: column;
+    /* display: block; */
+    position: relative;
+  }
 
-.form__item + .form__item {
-  margin-top: 10px;
-}
+  &__item + &__item {
+    margin-top: 10px;
+  }
 
-.form__label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: $color-secondary;
+  &__label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: $color-secondary;
+  }
+
+  &__separator {
+    width: 100%;
+    height: 30px;
+  }
+
+  &__btn {
+    padding-top: 10px;
+    padding-right: 28px;
+    padding-bottom: 10px;
+    padding-left: 28px;
+    margin-left: auto;
+    margin-top: 0;
+    margin-right: auto;
+    margin-bottom: 0;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-origin: content-box;
+    border: none;
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  }
+  &__btn-title {
+    display: block;
+    width: 96px;
+    padding: 0;
+    margin: 0;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+  }
 }
 
 .field {
@@ -122,76 +162,76 @@ form {
   border-radius: 4px;
   border-width: 1px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.field:hover,
-.field:focus {
-  outline: none;
-  border-color: $color-accent;
-}
-.field:hover {
-  cursor: pointer;
-}
+  &:hover,
+  &:focus {
+    outline: none;
+    border-color: $color-accent;
+  }
+  &:hover {
+    cursor: pointer;
+  }
 
-.field__name {
-  padding: 0 auto;
-  margin-top: 4px;
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-.field__phone {
-  padding: 0 auto;
-  margin-top: 4px;
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-.field__email {
-  padding: 0 auto;
-  margin-top: 4px;
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-.field__comment {
-  padding: 12px 16px;
-  margin-top: 4px;
-  margin-left: 0;
-  margin-bottom: 0;
-  margin-right: 0;
-  width: 100%;
-  height: 120px;
-  resize: none;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
+  &__name {
+    padding: 0 auto;
+    margin-top: 4px;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
+  &__phone {
+    padding: 0 auto;
+    margin-top: 4px;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
+  &__email {
+    padding: 0 auto;
+    margin-top: 4px;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
+  &__comment {
+    padding: 12px 16px;
+    margin-top: 4px;
+    margin-left: 0;
+    margin-bottom: 0;
+    margin-right: 0;
+    width: 100%;
+    height: 120px;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
 
-.field__icon {
-  display: flex;
-  position: absolute;
-  top: 29px;
-  left: 12px;
-  width: 18px;
-  height: 18px;
-  justify-content: center;
-  align-items: center;
-  fill: $color-primary;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.field:hover + .field__icon {
-  fill: $color-accent;
+  &__icon {
+    display: flex;
+    position: absolute;
+    top: 29px;
+    left: 12px;
+    width: 18px;
+    height: 18px;
+    justify-content: center;
+    align-items: center;
+    fill: $color-primary;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &:hover + &__icon {
+    fill: $color-accent;
+  }
 }
 
 .offer {
@@ -206,98 +246,59 @@ form {
   justify-content: center;
   align-items: center;
   position: relative;
-}
 
-.form__separator {
-  width: 100%;
-  height: 30px;
-}
+  &__checkbox {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 
-.offer__checkbox {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+    position: absolute;
+  }
 
-  position: absolute;
-}
+  &__link {
+    text-decoration: underline;
+    color: $color-accent;
+  }
+  &__icon {
+    display: block;
+    position: absolute;
+    width: 16px;
+    height: 15px;
+    top: 4px;
+    left: 0;
+    fill: #ffffff;
+    background-color: #ffffff;
 
-.offer__link {
-  text-decoration: underline;
-  color: $color-accent;
-}
-.offer__icon {
-  display: block;
-  position: absolute;
-  width: 16px;
-  height: 15px;
-  top: 4px;
-  left: 0;
-  fill: #ffffff;
-  background-color: #ffffff;
+    border-width: 2px;
+    border-style: solid;
+    border-color: $color-primary;
+    border-radius: 2px;
+    background-origin: content-box;
+  }
+  &:hover {
+    cursor: pointer;
+  }
 
-  border-width: 2px;
-  border-style: solid;
-  border-color: $color-primary;
-  border-radius: 2px;
-  background-origin: content-box;
-}
-.offer:hover {
-  cursor: pointer;
-}
+  &__checkbox:checked + &__icon {
+    background-color: $color-accent;
+    border-color: $color-accent;
+    stroke: #ffffff;
+    stroke-width: 1px;
+  }
+  &__text {
+    margin-left: 7px;
+    margin-bottom: 0;
+    padding-left: 16px;
+    width: 100%;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: $color-secondary;
+  }
 
-.offer__checkbox:checked + .offer__icon {
-  background-color: $color-accent;
-  border-color: $color-accent;
-  stroke: #ffffff;
-  stroke-width: 1px;
-}
-.offer__text {
-  margin-left: 7px;
-  margin-bottom: 0;
-  padding-left: 16px;
-  width: 100%;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: $color-secondary;
-}
-
-.offer__link {
-  color: $color-accent;
-  text-decoration: underline;
-}
-
-.form__btn {
-  padding-top: 10px;
-  padding-right: 28px;
-  padding-bottom: 10px;
-  padding-left: 28px;
-  margin-left: auto;
-  margin-top: 0;
-  margin-right: auto;
-  margin-bottom: 0;
-  width: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-origin: content-box;
-  border: none;
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-.form__btn-title {
-  display: block;
-  width: 96px;
-  padding: 0;
-  margin: 0;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
+  &__link {
+    color: $color-accent;
+    text-decoration: underline;
+  }
 }
