--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,16 @@
 @import "./utils/variables";
+@import "./components/logo";
 @import "./components/socials";
 @import "./components/button";
-@import "./components/style";
+@import "./components/common";
+@import "./components/page-header";
+@import "./components/hero";
+@import "./components/features";
+@import "./components/directions";
+@import "./components/command";
+@import "./components/clients";
+@import "./components/footer";
+@import "./components/subscribe";
+@import "./components/filter";
+@import "./components/portfolio";
+@import "./components/form";
